// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link change class when hovered 1`] = `
<a
  className="link"
  href="https://github.com/Valerioageno/reactix"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  rel="noreferrer"
  target="_blank"
>
  Repo
</a>
`;

exports[`Link change class when hovered 2`] = `
<a
  className="link linkHovered"
  href="https://github.com/Valerioageno/reactix"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  rel="noreferrer"
  target="_blank"
>
  Repo
</a>
`;

exports[`Link change class when hovered 3`] = `
<a
  className="link"
  href="https://github.com/Valerioageno/reactix"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  rel="noreferrer"
  target="_blank"
>
  Repo
</a>
`;
